fix: remove lenis smooth scroll - fix overflow hidden blocking scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,18 +10,6 @@ html {
   font-size: 16px;
 }
 
-html.lenis,
-html.lenis body {
-  height: auto;
-}
-
-html.lenis-smooth {
-  scroll-behavior: auto;
-}
-
-html.lenis-smooth body {
-  overflow: hidden;
-}
 
 * {
   margin: 0;
